--- a/src/app/pages/teachers/teacher-registration-form/teacher-registration-form.component.html
+++ b/src/app/pages/teachers/teacher-registration-form/teacher-registration-form.component.html
@@ -1,1 +1,105 @@
-<p>teacher-registration-form works!</p>
+<form class="registration-form" [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+    <h3>Teacher Information</h3>
+   <div formGroupName="teacher" class="form-group">
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>First Name</mat-label>
+        <input matInput placeholder="Enter first name" formControlName="firstName">
+        <mat-error *ngIf="hasError('teacher', 'firstName', 'required')">First name is required</mat-error>
+        <mat-error *ngIf="hasError('teacher', 'firstName', 'minlength')">First name must be at least 2 characters long</mat-error>
+      </mat-form-field>
+  
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Last Name</mat-label>
+        <input matInput placeholder="Enter last name" formControlName="lastName">
+        <mat-error *ngIf="hasError('teacher', 'lastName', 'required')">Last name is required</mat-error>
+        <mat-error *ngIf="hasError('teacher', 'lastName', 'minlength')">Last name must be at least 2 characters long</mat-error>
+      </mat-form-field>
+   
+      <mat-form-field appearance="outline">
+        <mat-label>Birth Date</mat-label>
+        <input matInput [matDatepicker]="picker" placeholder="MM/DD/YYYY" formControlName="birthDate">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+        <mat-error *ngIf="hasError('teacher', 'birthDate', 'required')">Birth date is required</mat-error>
+        
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Birth Place</mat-label>
+        <input matInput placeholder="Enter birth place" formControlName="birthPlace">
+        <mat-error *ngIf="hasError('teacher','birthPlace', 'required')">Birth place is required</mat-error>
+  
+      </mat-form-field>
+      
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Nationality</mat-label>
+        <input matInput placeholder="Nationality" formControlName="nationality">
+      </mat-form-field>
+  
+  
+      <h3>Gender</h3>
+      <mat-radio-group formControlName="gender" class="gender-group">
+        <mat-radio-button *ngFor="let gender of genders" [value]="gender">
+          {{ gender }}
+        </mat-radio-button>
+      </mat-radio-group>
+      <mat-error *ngIf="hasError('teacher', 'gender', 'required')">Please select a gender</mat-error>
+    
+  
+    <h3>Address</h3>
+    <div formGroupName="address">
+  
+      <mat-form-field appearance="outline">
+        <mat-label>Street</mat-label>
+        <input matInput placeholder="Street" formControlName="street">
+        <mat-error *ngIf="hasError('teacher.address', 'street', 'required')">Street is required</mat-error>
+      </mat-form-field>
+  
+      <mat-form-field appearance="outline">
+        <mat-label>Street Number</mat-label>
+      <input matInput placeholder="streetNumber" formControlName="streetNumber">
+      <mat-error *ngIf="hasError('teacher.address','streetNumber' ,'required')">Street number is required</mat-error>
+     </mat-form-field>
+  
+     <mat-form-field appearance="outline">
+      <mat-label>City</mat-label>
+    <input matInput placeholder="city" formControlName="city">
+    <mat-error *ngIf="hasError('teacher.address','city' ,'required')">City is required</mat-error>
+   </mat-form-field>
+     
+     <mat-form-field appearance="outline">
+      <mat-label>Postal Code </mat-label>
+      <input matInput placeholder="Postal Code" formControlName="postalCode">
+      <mat-error *ngIf="hasError('teacher.address','postalCode', 'required')">Postal code is required</mat-error>
+      <mat-error *ngIf="hasError('teacher.address','postalCode', 'pattern')">Postal code must be a 5-digit number</mat-error>
+    </mat-form-field>
+    </div>
+    
+    </div>
+
+     <h3>Documents Upload</h3>
+    <div formArrayName="documents">
+      <div *ngFor="let document of documents.controls; let i = index" [formGroupName]="i" class="document-upload">
+        <mat-form-field appearance="outline">
+          <mat-label>Document Type</mat-label>
+          <mat-select formControlName="documentType">
+            <mat-option *ngFor="let type of documentTypes" [value]="type">
+              {{ type }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+  
+        <input type="file" (change)="onFileSelected($event, i)" formControlName="file" />
+  
+        <button mat-button color="warn" (click)="removeDocument(i)">Remove Document</button>
+      </div>
+    </div>
+  
+    <button mat-button color="primary" (click)="addDocument()">Add Document</button>
+  
+  
+    <div class="button-container">
+      <button mat-raised-button color="primary" type="submit">Submit</button>
+     
+    </div> 
+  </form>
+  
