--- a/src/app/pages/students/student-details/student-details.component.html
+++ b/src/app/pages/students/student-details/student-details.component.html
@@ -1,8 +1,13 @@
+<div *ngIf="!student" class="loading-container">
+  <mat-spinner></mat-spinner>
+  <p>Loading student details...</p>
+</div>
+
 <div *ngIf="student" class="student-details-container mat-elevation-z8">
   <!-- Profile Picture Section -->
   <div class="profile-picture-section">
     <img 
-      [src]="student.profilePictureUrl || 'assets/images/default_profile.png'" 
+      [src]="profilePictureUrl || 'assets/images/default_profile.png'" 
       alt="Profile Picture" 
       class="profile-picture">
     <div>
@@ -15,19 +20,22 @@
   <div class="student-info-section">
     <h2>{{ student.firstName }} {{ student.lastName }}</h2>
     <mat-divider></mat-divider>
-    <p><strong>Date of Birth:</strong> {{ student.dateOfBirth | date: 'longDate' }}</p>
-    <p><strong>Email:</strong> {{ student.email }}</p>
-    <p><strong>Phone:</strong> {{ student.phone }}</p>
-    <!-- <p><strong>Nationality:</strong> {{ student.nationality }}</p> -->
+    <p><strong>Date of Birth:</strong> {{ student.birthDate }}</p>
+    <p><strong>Place of Birth:</strong> {{ student.birthPlace}}</p>
+    <p><strong>Gender:</strong> {{ student.gender }}</p>
+     <p><strong>Matriculation Number:</strong> {{ student.matNumber }}</p>
+  
   </div>
 
   <!-- Address Section -->
   <div class="address-section">
     <h3>Address</h3>
     <mat-divider></mat-divider>
-    <p><strong>Street:</strong> {{ student.addressDto.street }}, {{ student.addressDto.streetNumber }}</p>
-    <p><strong>Postal Code:</strong> {{ student.addressDto.postalCode }}</p>
-    <p><strong>City:</strong> {{ student.addressDto.city }}</p>
+    <p><strong>Country</strong> {{ student.addressResponseDto.country }}</p>
+    <p><strong>City:</strong> {{ student.addressResponseDto.city }}</p>
+    <p><strong>Postal Code:</strong> {{ student.addressResponseDto.postalCode }}</p>
+    <p><strong>Street:</strong> {{ student.addressResponseDto.street }}, {{ student.addressResponseDto.streetNumber }}</p>
+
   </div>
 
   <!-- Academic Information Section -->
@@ -50,11 +58,11 @@
     <div>
       <p><strong>Courses:</strong></p>
       <mat-list>
-        <!-- <mat-list-item *ngFor="let course of student.courses">
+         <mat-list-item *ngFor="let course of student.courseResponseDtos">
           <mat-icon mat-list-icon>book</mat-icon>
           <span mat-line>{{ course.name }}</span>
            <span mat-line class="secondary-text">{{ course.description }}</span> 
-                  </mat-list-item> -->
+                  </mat-list-item> 
       </mat-list>
     </div>
   </div>
@@ -63,12 +71,17 @@
   <div class="guardian-info-section">
     <h3>Guardians</h3>
     <mat-divider></mat-divider>
-    <!-- <div *ngFor="let guardian of student.guardians" class="guardian">
+    <div *ngFor="let guardian of student.guardianResponseDtos" class="guardian">
       <p><strong>Name:</strong> {{ guardian.firstName }} {{ guardian.lastName }}</p>
+      <p><strong>Gender:</strong> {{ guardian.gender }}</p>
       <p><strong>Relationship:</strong> {{ guardian.relationship }}</p>
+      <p><strong>Country:</strong> {{ guardian.country }}</p>
+      <p><strong>CommunicationType:</strong> {{ guardian.communicationType }}</p>
+      <p><strong>contactLevel:</strong> {{ guardian.contactLevel }}</p>
       <p><strong>Phone:</strong> {{ guardian.phone }}</p>
+      <p><strong>Mobile:</strong> {{ guardian.mobile }}</p>
       <p><strong>Email:</strong> {{ guardian.email }}</p>
-    </div> -->
+    </div> 
   </div>
 
   <!-- Actions -->
