--- a/src/app/pages/students/student-details/student-details.component.html
+++ b/src/app/pages/students/student-details/student-details.component.html
@@ -55,6 +55,15 @@
       </mat-list>
     </div>
 
+
+    <div class="class-section">
+      <h3>Classe</h3>
+      <mat-divider></mat-divider>
+      <p><strong>Classename: </strong> {{ student.classeResponseDto.name}}</p>
+      <p><strong>Classe Discription:</strong> {{ student.classeResponseDto.description }}</p>
+ 
+    </div>   
+
     <div>
       <p><strong>Courses:</strong></p>
       <mat-list>
