--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,3 @@
-<!-- src/app/admin/admin-dashboard.component.html -->
 <div class="admin-dashboard">
   <!-- Top row of summary cards -->
   <div class="dashboard-summary-grid">
@@ -12,8 +11,8 @@
     <!-- Roles Card -->
     <mat-card class="summary-card">
       <mat-icon class="summary-icon">supervisor_account</mat-icon>
-      <h3>Total Roles</h3>
-      <p>{{ totalRoles }}</p>
+      <h3>Total Roles && Permissions</h3>
+      <p>{{ totalRoles }} |  {{ totalPermissions }} </p>  
     </mat-card>
 
     <!-- System Logs Summary Card -->
@@ -127,12 +126,12 @@
 
   <!-- Quick Links Section -->
   <div class="quick-links">
-    <mat-card class="quick-link-card" routerLink="/admin/users">
+    <mat-card class="quick-link-card" routerLink="/users">
       <mat-icon>person</mat-icon>
       <p>Manage Users</p>
     </mat-card>
 
-    <mat-card class="quick-link-card" routerLink="/admin/roles">
+    <mat-card class="quick-link-card" routerLink="/roles">
       <mat-icon>group</mat-icon>
       <p>Manage Roles</p>
     </mat-card>
