--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -43,8 +43,41 @@
                         </div>
                       </div>
                     </div>
-  
                     <div class="mb-3">
+                      <label for="password" class="form-label">Password</label>
+                      <div class="input-group">
+                        <input
+                          [type]="hidePassword ? 'password' : 'text'"
+                          id="password"
+                          formControlName="password"
+                          class="form-control"
+                          [ngClass]="{
+                            'is-invalid': password?.touched && password?.invalid
+                          }"
+                        />
+                        <button
+                          type="button"
+                          class="btn btn-outline-secondary"
+                          (click)="togglePasswordVisibility()"
+                          [attr.aria-label]="hidePassword ? 'Show password' : 'Hide password'"
+                        >
+                          <i [class]="hidePassword ? 'bi-eye-slash' : 'bi-eye'"></i>
+                        </button>
+                      </div>
+                      <div
+                        *ngIf="password?.touched && password?.invalid"
+                        class="invalid-feedback"
+                      >
+                        <div *ngIf="password?.errors?.['required']">
+                          Password is required.
+                        </div>
+                        <div *ngIf="password?.errors?.['minlength']">
+                          Password must be at least 6 characters long.
+                        </div>
+                      </div>
+                    </div>
+                      
+                    <!-- <div class="mb-3">
                       <label for="password" class="form-label">Password</label>
                       <input
                         type="password"
@@ -66,7 +99,10 @@
                           Password must be at least 6 characters long.
                         </div>
                       </div>
-                    </div>
+                    </div> -->
+
+
+
                     <div class="pt-1 mb-4">
                      <button class="btn btn-primary w-100" type="submit">
                         Login
