added update und delete Student

--- a/src/app/pages/admin/role-details/role-details.component.html
+++ b/src/app/pages/admin/role-details/role-details.component.html
@@ -11,7 +11,7 @@
     <strong>Added By:</strong> {{ role.addedBy }} on {{ role.addedOn | date: 'long' }}
   </p>
   <p>
-    <strong>Last Modified By:</strong> {{ role.modifiedBy || 'N/A' }} on {{ role?.modifiedOn | date: 'long' }}
+    <strong>Last Modified By:</strong> {{ role.modifiedBy || 'N/A' }} on {{ role.modifiedOn | date: 'long' }}
   </p>
 
   <h3>Permissions</h3>
