--- a/src/app/pages/admin/manage-users/manage-users.component.html
+++ b/src/app/pages/admin/manage-users/manage-users.component.html
@@ -1,49 +1,38 @@
-<div class="user-management-container">
-    <h2>User Management</h2>
-    <button mat-raised-button color="primary" (click)="openAddUserDialog()">Add User</button>
-    
-    <mat-table [dataSource]="users" matSort class="mat-elevation-z8">
-      <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-        <mat-cell *matCellDef="let user"> {{ user.firstname }} {{ user.lastname }} </mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="username">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Username</mat-header-cell>
-        <mat-cell *matCellDef="let user"> {{ user.username }} </mat-cell>
-      </ng-container>
-      
-      <ng-container matColumnDef="email">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
-        <mat-cell *matCellDef="let user"> {{ user.email }} </mat-cell>
-      </ng-container>
+<div class="user-role-management-container">
+  <h2>User Role Management</h2>
+  <mat-table [dataSource]="users" class="mat-elevation-z8">
+    <!-- First Column: User Names -->
+    <ng-container matColumnDef="users">
+      <mat-header-cell *matHeaderCellDef>Users</mat-header-cell>
+      <mat-cell *matCellDef="let user">{{ user.firstname }} {{ user.lastname }}</mat-cell>
+    </ng-container>
 
-      <ng-container matColumnDef="gender">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Gender</mat-header-cell>
-        <mat-cell *matCellDef="let user"> {{ user.gender }} </mat-cell>
-      </ng-container>
-      
-      <ng-container matColumnDef="status">
-        <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-        <mat-cell *matCellDef="let user"> {{ user.isActive }} </mat-cell>
-      </ng-container>
-      
-      <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-        <mat-cell *matCellDef="let user">
-          <button mat-icon-button color="primary" (click)="openEditUserDialog(user)">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="warn" (click)="confirmDeleteUser(user.id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-cell>
-      </ng-container>
-      
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+    <!-- Dynamic Columns for Roles -->
+    <ng-container *ngFor="let role of availableRoles" [matColumnDef]="role.name">
+      <mat-header-cell *matHeaderCellDef>{{ role.name }}</mat-header-cell>
+      <mat-cell *matCellDef="let user">
+        <mat-radio-group
+          [value]="user.role?.id"
+          (change)="onRoleChange(user.id, role.id, $event.value === role.id)">
+          <mat-radio-button
+            [value]="role.id"
+            [checked]="user.role?.id === role.id">
+          </mat-radio-button>
+        </mat-radio-group>
+      </mat-cell>
+    </ng-container>
 
-    <button mat-raised-button color="primary" routerLink="/admin-dashboard">Go Back to Home</button>
-    
+    <!-- Header Row -->
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+
+    <!-- Data Rows -->
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+
+  <!-- Save Changes Button -->
+  <div class="actions">
+    <button mat-raised-button color="primary" (click)="saveChanges()">Save Changes</button>
   </div>
-  
+
+  <button mat-raised-button color="accent" routerLink="/admin-dashboard">Go Back to Home</button>
+</div>
