--- a/src/app/pages/admin/manage-users/manage-users.component.scss
+++ b/src/app/pages/admin/manage-users/manage-users.component.scss
@@ -1,17 +1,29 @@
-.admin-dashboard {
-    .quick-links {
+.user-role-management-container {
+  mat-table {
+    width: 100%;
+    margin-top: 20px;
+
+    mat-header-cell, mat-cell {
+      text-align: center;
+    }
+
+    mat-radio-group {
       display: flex;
-      gap: 16px;
+      justify-content: center;
     }
   }
-  
-  .user-management-container,
-  .role-management-container {
-    padding: 16px;
-  
-    mat-table {
-      margin-top: 16px;
-      margin-bottom: 16px;
-    }
+
+  .actions {
+    margin-top: 20px;
+    text-align: right;
   }
-  
+
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  button {
+    margin-top: 10px;
+  }
+}
