--- a/src/app/pages/shared/footer/footer.component.html
+++ b/src/app/pages/shared/footer/footer.component.html
@@ -1,18 +1,18 @@
+
 <footer class="footer">
-  <div class="d-sm-flex justify-content-center justify-content-sm-between">
-    <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">
+  <div class="footer-content">
+    <span>
       Copyright © {{ defaultYear }} by
-      <a href="https://www.google.com/" target="_blank">
-        <strong>Bytmasoft information system</strong>
-      </a>
-      All rights reserved. made with <i class="ti-heart text-danger ml-1"></i
-      ><br />
-      D 69469 Weinheim Konrad-Adenauerstr. 9.
-      <strong>
-        <abbr title="phone">Phone: </abbr>(0049)176 760 750 37 E-mail:
-        <a href="mailto:m.abakar@bytmasoft.de">Abakar Mahamat</a>
-      </strong>
+      <a href="https://www.bytmasoft.com/" target="_blank">Bytmasoft Information System</a>.
+      All rights reserved.
+      <br />
+      Address: D 69469 Weinheim, Konrad-Adenauerstr. 9.
+      <br />
+      <strong>Phone:</strong> (0049)176 760 750 37
+      <br />
+      Email: <a href="mailto:m.abakar@bytmasoft.de">Abakar Mahamat</a>
     </span>
   </div>
 </footer>
+
 
