--- a/src/app/pages/students/student-registration-form/student-registration-form.component.html
+++ b/src/app/pages/students/student-registration-form/student-registration-form.component.html
@@ -167,8 +167,15 @@
   <button mat-button color="primary" (click)="addDocument()">Add Document</button>
 
 
+
   <div class="button-container">
-    <button mat-raised-button color="primary" type="submit">Submit</button>
-   
+    <button mat-raised-button color="primary" type="submit">
+      <mat-icon>save</mat-icon> Save
+    </button>
+    <button mat-raised-button color="warn" (click)="onCancel()">
+      <mat-icon>cancel</mat-icon> Cancel
+    </button>
+    
   </div>
+
 </form>
